fix nav on IE10

--- a/css/menu.css
+++ b/css/menu.css
@@ -65,12 +65,12 @@ body {
   font-weight: 700;
   color: #0c204f;
 }
+.navbar-toggler:hover, .navbar-toggler:focus {
+  background: none;
+}
 .dropdown button:focus {
   box-shadow: none;
   color: #f99f2a;
-}
-.navbar-toggler:hover, .navbar-toggler:focus {
-  background: none;
 }
 .dropdown .dropdown-menu {
   background-color: #e7e7e7;
@@ -169,7 +169,7 @@ body {
     width: auto;
   }
   .fixed-top {
-    overflow-y: initial;
+    overflow-y: visible;
   }
   #brand-wrap .navbar-brand {
     margin-right: 4rem;
@@ -182,15 +182,15 @@ body {
     color: white;
     font-weight: 700;
   }
-  /* change the color of active or hovered links */
-  .navbar-light .nav-item.active .nav-link,
-  .navbar-light .nav-item:focus .nav-link,
-  .navbar-light .nav-item:hover .nav-link {
-    color: #f99f2a;
-  }
   /* change the color of visited links */
   .navbar-light a:visited {
     color: #0c204f;
+  }
+  /* change the color of active or hovered links */
+  .navbar-light .nav-item:hover .nav-link,
+  .navbar-light .nav-item.active .nav-link,
+  .navbar-light .nav-item:focus .nav-link {
+    color: #f99f2a;
   }
   .navbar-brand img {
     width: 100%;
@@ -238,17 +238,10 @@ body {
     background-color: #1c2d59;
     border: none;
     font-size: .85em;
-    max-height: 50vh;
-    overflow: inherit;
+    max-height: 70vh;
+    overflow: visible;
     padding: .5rem 0 1rem 0;
     text-align: left;
-  }
-  .dropdown:hover .dropdown-menu {
-    display: block;
-  }
-  .dropdown:hover .dropdown-menu a:hover {
-    color: #f99f2a;
-    background-color: #1c2d59;
   }
   .dropdown .dropdown-menu a {
     color: white;
@@ -259,24 +252,32 @@ body {
   .dropdown-toggle::after {
     display: none;
   }
+  .dropdown:hover .dropdown-menu {
+    display: block;
+  }
+  .dropdown:hover .dropdown-menu a:hover {
+    color: #f99f2a;
+    background-color: #1c2d59;
+  }
+
   /* Rows and Columns */
   .dropdown .single-col {
     left: calc(100% - 190px);
-    top: 6em;
+    top: 6.2em;
   }
   .dropdown .sm-col {
-    top: 6em;
+    top: 6.2em;
     left: calc(100% - 155px);
   }
   .dropdown-twocol {
     min-width: 34em;
     left: -12.5em;
-    top: 6em;
+    top: 6.2em;
   }
   .dropdown-multicol {
     min-width: 50em;
     left: -19.45em;
-    top: 6em;
+    top: 6.2em;
   }
   #multicol-row {
     width: 100%;
